Complete chapter-5: minimal boot to protected mode

--- a/16-bit-real-mode/Makefile
+++ b/16-bit-real-mode/Makefile
@@ -1,18 +1,11 @@
+include ../common.mk
+
 chap2:
 	bochs
 
 chap3:
 # `-f bin` to produce raw machine code
 	nasm boot_sect-chap3.asm -f bin -o boot_sect.bin
-
-hex_boot_sect:
-	od -t x1 -A n boot_sect.bin
-
-run-bochs:
-	bochs -q
-
-run-qemu:
-	qemu-system-x86_64 -fda boot_sect.bin
 
 chap3-1:
 	nasm boot_sect-chap3-1.asm -f bin -o boot_sect.bin
@@ -37,6 +30,3 @@ chap3-6-1:
 
 chap3-6-4:
 	nasm boot_sect-chap3-6-4.asm -f bin -o boot_sect.bin
-
-clean:
-	rm boot_sect.bin
